WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253943
Fix :has(:nth-child()) invalidation and friends
https://bugs.webkit.org/show_bug.cgi?id=253943
Summary
Fix :has(:nth-child()) invalidation and friends
Tim Nguyen (:ntim)
Reported
2023-03-15 00:02:06 PDT
https://wpt.fyi/results/css/selectors/invalidation?label=master&label=experimental&product=chrome&product=firefox&product=safari&aligned&view=interop&q=label%3Ainterop-2023-has%20child-indexed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-15 12:40:40 PDT
<
rdar://problem/106768224
>
Cameron McCormack (:heycam)
Comment 2
2023-09-03 18:52:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17394
EWS
Comment 3
2023-09-07 23:32:49 PDT
Committed
267771@main
(630e5323e6dc): <
https://commits.webkit.org/267771@main
> Reviewed commits have been landed. Closing PR #17394 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug